--- a/app/assets/stylesheets/users/show.css.scss
+++ b/app/assets/stylesheets/users/show.css.scss
@@ -1,7 +1,4 @@
 #users_show, #authors_show {
-  position:relative;
-  overflow:hidden;
-
   #stats {
     padding-bottom:1em;
     margin-bottom:3em;
